@@ -1,3 +1,8 @@
+2008-06-24  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_config.c (_cerebrod_load_config): Make
+	error message output clearer.
+	
 2008-06-18  Albert Chu  <chu11@llnl.gov>
 
 	* etc/cerebrod: Adjust chkconfig start priority.
